--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -136,7 +136,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>XX</string>
+              <string>Close</string>
              </property>
             </widget>
            </item>
