--- a/src/icons.qrc
+++ b/src/icons.qrc
@@ -7,6 +7,7 @@
         <file>icons/serial_update.png</file>
         <file>icons/file_save.png</file>
         <file>icons/spinners.gif</file>
+        <file>icons/file_close.png</file>
         <file>icons/eraser.png</file>
     </qresource>
 </RCC>
